--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="container">
+    <header class="main-header">
+      <svg class="return" fill="#000000"  viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 0h24v24H0z" fill="none"/>
+        <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
+    </svg>
+    <span class="title">Create data</span>
+  </header>
   <app-root></app-root>
+  </div>
+  
 </body>
 </html>
